@@ -6,14 +6,16 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import com.example.perpustakaan.model.JwtUtil;
+import org.springframework.lang.NonNull;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
@@ -24,37 +26,45 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     }
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request,
-                                    HttpServletResponse response,
-                                    FilterChain filterChain) throws ServletException, IOException {
-
+    protected void doFilterInternal(
+            @NonNull HttpServletRequest request,
+            @NonNull HttpServletResponse response,
+            @NonNull FilterChain filterChain
+    ) throws ServletException, IOException {
         String authHeader = request.getHeader("Authorization");
         System.out.println("[JwtAuthFilter] Authorization header: " + authHeader);
 
         if (authHeader == null || !authHeader.startsWith("Bearer ")) {
-            // Tidak ada token, langsung lanjutkan
+            // ❗Tidak ada token → lanjutkan ke filter berikutnya
             filterChain.doFilter(request, response);
             return;
         }
 
         String token = authHeader.substring(7);
-        String npm = null;
+        String npm;
 
         try {
             npm = jwtUtil.validateTokenAndGetNpm(token);
             System.out.println("[JwtAuthFilter] Token valid, npm: " + npm);
         } catch (Exception e) {
             System.out.println("[JwtAuthFilter] Token invalid: " + e.getMessage());
-            // ❗ Jangan blokir request → lanjutkan saja
+            // ❗Jangan set authentication jika token tidak valid
             filterChain.doFilter(request, response);
             return;
         }
 
         if (npm != null && SecurityContextHolder.getContext().getAuthentication() == null) {
             UsernamePasswordAuthenticationToken authentication =
-                    new UsernamePasswordAuthenticationToken(npm, null, Collections.emptyList());
+                    new UsernamePasswordAuthenticationToken(
+                            npm,
+                            null,
+                            List.of(new SimpleGrantedAuthority("ROLE_USER")) // 🔷 Tambahkan authority minimal
+                    );
 
-            authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+            authentication.setDetails(
+                    new WebAuthenticationDetailsSource().buildDetails(request)
+            );
+
             SecurityContextHolder.getContext().setAuthentication(authentication);
             System.out.println("[JwtAuthFilter] Authentication set for user: " + npm);
         }
